--- a/biguse.html
+++ b/biguse.html
@@ -46,11 +46,12 @@
 				<div id="update_history">
 					12.30: 为梦幻大使活动做得小工具, 比较简单, 有建议可以在下边留言(图片太大了暂时传不上来...<br/>
 					12.30: 把图片喂给哈士奇咬了10分钟, 传上来了一份很模糊的临时版本, 1号左右有时间的时候重新压一遍<br/>
-					<br/>
-				</div>
 					1.30: 梦幻大使活动, 按配件大小/颜色搜索功能制作中, 预计3号左右能够完成<br/>
 					2.2: 优化颜色聚类算法, 添加筛选功能<br/>
 					2.3: 添加其他部件, 优化过滤算法<br/>
+					<br/>
+				</div>
+					3.18: 调整袜子和饰品可以搜索后添加<br/>
 					
 				<a href="#" id="show_history">历史更新</a><br/>
 				<br/>
