--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<link rel="icon" href="favicon.ico" type="image/x-icon" />
 		<meta name="renderer" content="webkit">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-		<title>\(=w=)/奇迹暖暖在线工具</title>
+		<title>_(:з」∠)_奇迹暖暖在线工具</title>
 		<link rel="stylesheet" href="bootstrap/bootstrap.min.css">
 		<link rel="stylesheet" href="onekeystrategy.css">
 		<link rel="stylesheet" href="style.css">
@@ -141,6 +141,7 @@
 				</div>
 					功能更新：by 黑的升华<br/>
 					2.29: 更新染/进筛选时, 会同时筛选出珍稀和珍稀染色<br/>
+					3.18: 修复全部分类下点击"添加所有显示的衣服到衣柜"功能, 调整一键攻略部分细节<br/>
 					<hr/>
 					衣柜、设计图更新：by 翡翠<br/>
 					<div id="history-update-info-2"></div>
@@ -249,7 +250,7 @@
 						<div class="fliter_form_div_right">
 							<fieldset>
 								<legend>高级选项</legend>
-									<div class="checkbox"><label><input type="checkbox" class="fliter" value="sortbyscore" /> 按分数和id排序饰品</label></div>
+									<div class="checkbox"><label><input type="checkbox" class="fliter" value="sortbyscore" /> 按分数和id排序</label></div>
 									<div class="checkbox"><label><input type="checkbox" class="fliter" value="balance" /> 均衡权重</label></div>
 									<div class="checkbox"><label><input type="checkbox" class="fliter" value="highscore" /> 高分权重</label></div>
 							</fieldset>
