--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 		<script type='text/javascript' charset="UTF-8" src='../nikkiup2u3_data/wardrobe.js'></script>
 		<script type='text/javascript' charset="UTF-8" src='scoring.js'></script>
 		<script type='text/javascript' charset="UTF-8" src='../nikkiup2u3_data/levels.js'></script>
+		<script type='text/javascript' charset="UTF-8" src='../nikkiup2u3_data/flist.js'></script>
 		<script type='text/javascript' charset="UTF-8" src='model.js'></script>
 		<script type='text/javascript' charset="UTF-8" src='../nikkiup2u3_data/pattern.js'></script>
 		<script type='text/javascript' charset="UTF-8" src='onekeystrategy.js'></script>
