--- a/biguse.html
+++ b/biguse.html
@@ -23,6 +23,7 @@
 		<script type='text/javascript' charset="UTF-8" src='biguse_wardrobe.js'></script>
 		<script type='text/javascript' charset="UTF-8" src='scoring.js'></script>
 		<script type='text/javascript' charset="UTF-8" src='../nikkiup2u3_data/levels.js'></script>
+		<script type='text/javascript' charset="UTF-8" src='../nikkiup2u3_data/flist.js'></script>
 		<script type='text/javascript' charset="UTF-8" src='model.js'></script>
 		<script type='text/javascript' charset="UTF-8" src='biguse_model.js'></script>
 		<script type='text/javascript' charset="UTF-8" src='../nikkiup2u3_data/pattern.js'></script>
