fix onekeystrtegy show then f text bug change duoshuo style

--- a/index.html
+++ b/index.html
@@ -139,11 +139,12 @@
 					2.19: 修复原筛选; 新增筛选: 清空, 套装部件, 新品; 增加分类"全部"; qjnn.gift域名试用中<br/>
 					2.23: 新增方便拆解查询的筛选: 迷之屋限定(不包含仙履), 3星,4星,5星; 注: 不确定以后更新的设计图会不会用到现有的迷阁限定/双阁限定, 请自行判断是否要拆; 修复一键添加BUG<br/>
 					2.29: 更新染/进筛选时, 会同时筛选出珍稀和珍稀染色<br/>
+					3.18: 修复全部分类下点击"添加所有显示的衣服到衣柜"功能, 调整一键攻略部分细节<br/>
 					<br/>
 				</div>
 					功能更新：by 黑的升华<br/>
-					3.18: 修复全部分类下点击"添加所有显示的衣服到衣柜"功能, 调整一键攻略部分细节<br/>
 					3.23: F品筛选功能试用中<br/>
+					4.1 : 修复部分细节问题<br/>
 					<hr/>
 					衣柜、设计图更新：by 翡翠<br/>
 					<div id="history-update-info-2"></div>
