--- a/index.html
+++ b/index.html
@@ -261,6 +261,7 @@
 								<legend>筛选(先点击显示全部衣服)</legend>
 									<button  type="button" class="btn btn-xs btn-info front_filter_option" >全部</button>
 									<button  type="button" class="btn btn-xs btn-default front_filter_option" >尚缺材料</button>
+									<button  type="button" class="btn btn-xs btn-default front_filter_option" >暂不缺材料</button>
 									<button  type="button" class="btn btn-xs btn-default front_filter_option" >少女级</button>
 									<button  type="button" class="btn btn-xs btn-default front_filter_option" >少女染/进</button>
 									<button  type="button" class="btn btn-xs btn-default front_filter_option" >公主级</button>
