--- a/index.html
+++ b/index.html
@@ -140,11 +140,12 @@
 					2.23: 新增方便拆解查询的筛选: 迷之屋限定(不包含仙履), 3星,4星,5星; 注: 不确定以后更新的设计图会不会用到现有的迷阁限定/双阁限定, 请自行判断是否要拆; 修复一键添加BUG<br/>
 					2.29: 更新染/进筛选时, 会同时筛选出珍稀和珍稀染色<br/>
 					3.18: 修复全部分类下点击"添加所有显示的衣服到衣柜"功能, 调整一键攻略部分细节<br/>
+					3.23: F品筛选功能试用中<br/>
 					<br/>
 				</div>
 					功能更新：by 黑的升华<br/>
-					3.23: F品筛选功能试用中<br/>
 					4.1 : 修复部分细节问题<br/>
+					5.5 : 一键攻略去除F品；双手持部位调整；前台筛选增加暂不缺材料，但有机会成为以后设计图的材料，分解时请注意<br/>
 					<hr/>
 					衣柜、设计图更新：by 翡翠<br/>
 					<div id="history-update-info-2"></div>
