--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 				</div>
 					功能更新：by 黑的升华<br/>
 					4.1 : 修复部分细节问题<br/>
-					5.5 : 一键攻略去除F品；双手持部位调整；前台筛选增加暂不缺材料，但有机会成为以后设计图的材料，分解时请注意<br/>
+					5.5 : 一键攻略去除F品；双手持部位调整；部分tag关卡的推荐饰品调整；筛选增加暂不缺材料，但有机会成为以后设计图的材料，分解时请注意<br/>
 					<hr/>
 					衣柜、设计图更新：by 翡翠<br/>
 					<div id="history-update-info-2"></div>
