add option acc9

--- a/index.html
+++ b/index.html
@@ -141,11 +141,12 @@
 					2.29: 更新染/进筛选时, 会同时筛选出珍稀和珍稀染色<br/>
 					3.18: 修复全部分类下点击"添加所有显示的衣服到衣柜"功能, 调整一键攻略部分细节<br/>
 					3.23: F品筛选功能试用中<br/>
+					4.1 : 修复部分细节问题<br/>
 					<br/>
 				</div>
 					功能更新：by 黑的升华<br/>
-					4.1 : 修复部分细节问题<br/>
 					5.5 : 一键攻略去除F品；双手持部位调整；部分tag关卡的推荐饰品调整；筛选增加暂不缺材料，但有机会成为以后设计图的材料，分解时请注意<br/>
+					5.9 : 新增9件饰品选项给不想带饰品的小黑<br/>
 					<hr/>
 					衣柜、设计图更新：by 翡翠<br/>
 					<div id="history-update-info-2"></div>
@@ -257,6 +258,7 @@
 									<div class="checkbox"><label><input type="checkbox" class="fliter" value="sortbyscore" /> 按分数和id排序</label></div>
 									<div class="checkbox"><label><input type="checkbox" class="fliter" value="balance" /> 均衡权重</label></div>
 									<div class="checkbox"><label><input type="checkbox" class="fliter" value="highscore" /> 高分权重</label></div>
+									<div class="checkbox"><label><input type="checkbox" class="fliter" value="acc9" /> 9件饰品</label></div>
 							</fieldset>
 							<fieldset>
 								<legend>筛选(先点击显示全部衣服)</legend>
