--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<link rel="icon" href="favicon.ico" type="image/x-icon" />
 		<meta name="renderer" content="webkit">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-		<title>_(:з」∠)_奇迹暖暖在线工具</title>
+		<title>~庆祝奇暖一周年~ 奇迹暖暖在线工具</title>
 		<link rel="stylesheet" href="bootstrap/bootstrap.min.css">
 		<link rel="stylesheet" href="onekeystrategy.css">
 		<link rel="stylesheet" href="style.css">
@@ -144,9 +144,10 @@
 					4.1 : 修复部分细节问题<br/>
 					<br/>
 				</div>
-					功能更新：by 黑的升华<br/>
+					功能更新：by 黑的升华 & Rean翎<br/>
 					5.5 : 一键攻略去除F品；双手持部位调整；部分tag关卡的推荐饰品调整；筛选增加暂不缺材料，但有机会成为以后设计图的材料，分解时请注意<br/>
 					5.9 : 新增9件饰品选项给不想带饰品的小黑<br/>
+					5.13 : 更新荧光之灵, 感谢楼上的rean帮忙更新配装器~ >,< <br/>
 					<hr/>
 					衣柜、设计图更新：by 翡翠<br/>
 					<div id="history-update-info-2"></div>
