--- a/index.html
+++ b/index.html
@@ -143,11 +143,12 @@
 					3.23: F品筛选功能试用中<br/>
 					4.1 : 修复部分细节问题<br/>
 					5.5 : 一键攻略去除F品；双手持部位调整；部分tag关卡的推荐饰品调整；筛选增加暂不缺材料，但有机会成为以后设计图的材料，分解时请注意<br/>
+					5.9 : 新增9件饰品选项给不想带饰品的小黑<br/>
 					<br/>
 				</div>
 					功能更新：by 黑的升华 & Rean翎<br/>
-					5.9 : 新增9件饰品选项给不想带饰品的小黑<br/>
-					5.13 : 更新荧光之灵, 感谢楼上的rean帮忙更新配装器~ o&gt;,&lt;o <br/>
+					5.13: 更新萤光之灵, 感谢楼上的rean帮忙更新配装器~ o&gt;,&lt;o <br/>
+					5.15: 调整萤光之灵权重比例, 计分方法<br/>
 					<hr/>
 					衣柜、设计图更新：by 翡翠<br/>
 					<div id="history-update-info-2"></div>
