--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 				</div>
 					功能更新：by 黑的升华 & Rean翎<br/>
 					5.13: 更新萤光之灵, 感谢楼上的rean帮忙更新配装器~ o&gt;,&lt;o <br/>
-					5.15: 调整萤光之灵权重比例, 计分方法<br/>
+					5.15: 调整萤光之灵权重比例, 计分方法；点击高分权重自动推荐最高分的组合<br/>
 					<hr/>
 					衣柜、设计图更新：by 翡翠<br/>
 					<div id="history-update-info-2"></div>
