--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 		<script type='text/javascript' charset="UTF-8" src='../nikkiup2u3_data/flist.js'></script>
 		<script type='text/javascript' charset="UTF-8" src='model.js'></script>
 		<script type='text/javascript' charset="UTF-8" src='../nikkiup2u3_data/pattern.js'></script>
+		<script type='text/javascript' charset="UTF-8" src='onekeystrategy_lan.js'></script>
 		<script type='text/javascript' charset="UTF-8" src='onekeystrategy.js'></script>
 		<script type='text/javascript' charset="UTF-8" src='ui.js'></script>
 		<script type='text/javascript' charset="UTF-8" src='nikki.js'></script>
@@ -261,6 +262,7 @@
 									<div class="checkbox"><label><input type="checkbox" class="fliter" value="balance" /> 均衡权重</label></div>
 									<div class="checkbox"><label><input type="checkbox" class="fliter" value="highscore" /> 高分权重</label></div>
 									<div class="checkbox"><label><input type="checkbox" class="fliter" value="acc9" /> 9件饰品</label></div>
+									<div class="checkbox"><label><input type="checkbox" class="fliter" value="toulan" /> 偷懒模式(测试)</label></div>
 							</fieldset>
 							<fieldset>
 								<legend>筛选(先点击显示全部衣服)</legend>
