--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<link rel="icon" href="favicon.ico" type="image/x-icon" />
 		<meta name="renderer" content="webkit">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-		<title>~粉色和紫色的粽子~ 奇迹暖暖在线工具</title>
+		<title>\("▔□▔)/\(▔□▔")/ 奇迹暖暖在线工具</title>
 		<link rel="stylesheet" href="bootstrap/bootstrap.min.css">
 		<link rel="stylesheet" href="onekeystrategy.css">
 		<link rel="stylesheet" href="style.css">
@@ -147,11 +147,12 @@
 					5.9 : 新增9件饰品选项给不想带饰品的小黑<br/>
 					5.13: 更新萤光之灵, 感谢楼上的rean帮忙更新配装器~ o&gt;,&lt;o <br/>
 					5.15: 调整萤光之灵权重比例, 计分方法；点击高分权重自动推荐最高分的组合<br/>
+					6.1: 新增搜索功能，支持按套装名搜索，可选择添加到衣柜/购物车，暂时也想不到好的展示方法，先这样吧；顺便修复了导入时提示框过长的问题<br/>
 					<br/>
 				</div>
 					功能更新：by 黑的升华 & Rean翎<br/>
-					6.1: 新增搜索功能，支持按套装名搜索，可选择添加到衣柜/购物车，暂时也想不到好的展示方法，先这样吧；顺便修复了导入时提示框过长的问题<br/>
 					6.7: 调整一键攻略, 现在各分类最后一件必定是比较容易获得的单品, 预祝大家端午快乐~<br/>
+					6.27: 添加关卡筛选功能<br/>
 					<hr/>
 					衣柜、设计图更新：by 翡翠<br/>
 					<div id="history-update-info-2"></div>
@@ -174,7 +175,12 @@
 				<button style="display:none" class="btn btn-sm btn-default" id="aaa" onclick="getWardrobe()">同步分享的衣柜</button>
 				<br/>
 				<div id='filtersTop'>
-					<select id="theme" onChange="changeTheme()"></select><button id="onekey" class="btn btn-default">一键攻略</button>
+					<div class="btn-group">
+						<select id="theme-fliter" onChange="changeThemeFliter()" class="btn btn-default">
+						</select>
+						<select id="theme" onChange="changeTheme()" class="btn btn-default"></select>
+						<button id="onekey" class="btn btn-default">一键攻略</button>
+					</div>
 					<div id="tagInfo"></div>
 					<div id="skillInfo"></div>
 					<div id="categoryFInfo"></div>
