--- a/index.html
+++ b/index.html
@@ -177,8 +177,7 @@
 				<br/>
 				<div id='filtersTop'>
 					<div class="btn-group">
-						<select id="theme-fliter" onChange="changeThemeFliter()" class="btn btn-default">
-						</select>
+						<select id="theme-fliter" onChange="reDrawTheme()" class="btn btn-default"></select>
 						<select id="theme" onChange="changeTheme()" class="btn btn-default"></select>
 						<button id="onekey" class="btn btn-default">一键攻略</button>
 					</div>
