更新图鉴至V2.2.1 兼容关卡筛选

--- a/biguse.html
+++ b/biguse.html
@@ -50,17 +50,19 @@
 					1.30: 梦幻大使活动, 按配件大小/颜色搜索功能制作中, 预计3号左右能够完成<br/>
 					2.2: 优化颜色聚类算法, 添加筛选功能<br/>
 					2.3: 添加其他部件, 优化过滤算法<br/>
+					3.18: 调整袜子和饰品可以搜索后添加<br/>
 					<br/>
 				</div>
-					3.18: 调整袜子和饰品可以搜索后添加<br/>
+					7.19: 修复不显示分类的问题，增加图鉴至V2.2.1(暂时使用小图标)<br/>
 					
 				<a href="#" id="show_history">历史更新</a><br/>
 				<br/>
 				基础数据来自奇迹暖暖在线配装器 by黑的升华<br/>
-				图片数据来自amy_翡翠&米桃@QQ群 V1.6.3<br/>
+				图片数据来自amy_翡翠&米桃@QQ群 V2.2.1<br/>
 			</div><!-- announcement -->	
 			<div>
-				<select id="theme" onChange="changeTheme()"></select>
+				<select id="theme-fliter" onChange="reDrawTheme()" class="btn btn-default"></select>
+				<select id="theme" onChange="changeTheme()" class="btn btn-default"></select>
 				
 							<fieldset >
 								<legend>筛选</legend>
