--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<link rel="icon" href="favicon.ico" type="image/x-icon" />
 		<meta name="renderer" content="webkit">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-		<title>\("▔□▔)/\(▔□▔")/ 奇迹暖暖在线工具</title>
+		<title>Σ(°△°||)︴ 奇迹暖暖在线工具</title>
 		<link rel="stylesheet" href="bootstrap/bootstrap.min.css">
 		<link rel="stylesheet" href="onekeystrategy.css">
 		<link rel="stylesheet" href="style.css">
@@ -34,9 +34,8 @@
   <body>
 		<div class='title'>
 			奇迹暖暖在线工具 by <a href="http://weibo.com/u/3597140883">@黑的升华</a>   modified from
-			<a href="http://ivangift.github.io/nikkiup2u3/"><font style="color:red">意念挖坟的ip君@ivangift's github 20151201</font></a><br/>
-			服装、设计图数据 provided by amy_翡翠<br/>
-			全关卡数据、提示 provided by morei猫猫&兔子  <a href="http://tieba.baidu.com/p/4223816101">贴吧反馈</a> | <a href="http://weibo.com/5674185517/D9pJb9iSF">微博反馈</a><br/>
+			<a href="http://ivangift.github.io/nikkiup2u3/"> ivangift's github</a><br/>
+			<div class="alert alert-danger" role="alert">因为国内网络一些奇怪的问题, 部分地区无法访问在线工具, 做了一份镜像到国内, 访问地址<a href="http://qjnn.gift">qjnn.gift</a>, 新地址需要重新录入衣柜, 可以从<a href="http://seal100x.github.io/nikkiup2u3/">原地址</a>拷贝过来恢复备份</div>
 			<div id="share-link"></div>
 		</div>
 		<div id="StrategyInfo"></div>
@@ -160,7 +159,7 @@
 					<div id="history-update-info-2"></div>
 					<div id="update-info-2"></div>
 					<hr/>
-					关卡更新：by 兔子<br/>
+					关卡更新：by 兔子 <a href="http://tieba.baidu.com/p/4223816101">贴吧反馈</a> | <a href="http://weibo.com/5674185517/D9pJb9iSF">微博反馈</a><br/>
 					<div id="history-update-info-3"></div>
 					<div id="update-info-3"></div>
 					<br/>
