--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
 		<div class='title'>
 			奇迹暖暖在线工具 by <a href="http://weibo.com/u/3597140883">@黑的升华</a>   modified from
 			<a href="http://ivangift.github.io/nikkiup2u3/"> ivangift's github</a><br/>
-			<div class="alert alert-danger" role="alert">因为国内网络一些奇怪的问题, 部分地区无法访问在线工具, 做了一份镜像到国内, 访问地址<a href="http://qjnn.gift">qjnn.gift</a>, 新地址需要重新录入衣柜, 可以从<a href="http://seal100x.github.io/nikkiup2u3/">原地址</a>拷贝过来恢复备份</div>
+			<div class="" role="alert">国内镜像访问地址<a href="http://qjnn.gift">http://qjnn.gift</a>, 原地址<a href="http://seal100x.github.io/nikkiup2u3/">http://seal100x.github.io/nikkiup2u3</a></div>
+			衣柜、设计图更新：by 翡翠<br/>
+			关卡信息更新：by 兔子<br/>
 			<div id="share-link"></div>
 		</div>
 		<div id="StrategyInfo"></div>
@@ -149,11 +151,12 @@
 					6.1: 新增搜索功能，支持按套装名搜索，可选择添加到衣柜/购物车，暂时也想不到好的展示方法，先这样吧；顺便修复了导入时提示框过长的问题<br/>
 					6.7: 调整一键攻略, 现在各分类最后一件必定是比较容易获得的单品, 预祝大家端午快乐~<br/>
 					6.19: 推荐穿戴部件中高亮新品<br/>
+					6.27: 添加关卡筛选功能<br/>
 					<br/>
 				</div>
 					功能更新：by 黑的升华 & Rean翎<br/>
-					6.27: 添加关卡筛选功能<br/>
 					7.19: 给梦幻大使在线工具上传了新品的小图标并做了些优化<br/>
+					8.30: 赶在新章节前优化了一下偷懒攻略<br/>
 					<hr/>
 					衣柜、设计图更新：by 翡翠<br/>
 					<div id="history-update-info-2"></div>
@@ -164,7 +167,6 @@
 					<div id="update-info-3"></div>
 					<br/>
 					<a href="#" id="show_history">查看历史更新</a><br/><br/>
-					好记的域名: qjnn.gift
 			</div><!-- announcement -->	
 			<div class="fliter">
 				距离搭配赛结束还有<span id="showTime">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
