--- a/index.html
+++ b/index.html
@@ -173,7 +173,9 @@
 				&nbsp;&nbsp;|&nbsp;&nbsp;
 				<a href="biguse.html" target="_blank">梦幻大使对比工具</a>
 				&nbsp;&nbsp;|&nbsp;&nbsp;
-				<a href="introduce.html" target="_blank">配装器使用介绍(临时版, 图多慎点)</a>				
+				<a href="introduce.html" target="_blank">配装器使用介绍(临时版, 图多慎点)</a>
+				&nbsp;&nbsp;|&nbsp;&nbsp;
+				<a href="../nikkiup2u3_data/FAQ.html" target="_blank">配装器常见问题</a>
 				<button style="display:none" class="btn btn-sm btn-default" id="sharewardrobe">分享衣柜</button>&nbsp;&nbsp;|&nbsp;&nbsp;
 				<button style="display:none" class="btn btn-sm btn-default" id="aaa" onclick="getWardrobe()">同步分享的衣柜</button>
 				<br/>
