--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 				</div>
 					功能更新：by 黑的升华 & Rean翎<br/>
 					8.30: 赶在新章节前优化了一下偷懒攻略<br/>
-					10.6: 优化排斥品推荐计算<br/>
+					10.6: 优化排斥品推荐计算；一键攻略改为按满饰品衰减计算（懒黑模式按无衰减计算、9饰品模式按9饰品衰减计算）<br/>
 					<hr/>
 					衣柜、设计图更新：by 翡翠<br/>
 					<div id="history-update-info-2"></div>
