--- a/index.html
+++ b/index.html
@@ -153,12 +153,12 @@
 					6.19: 推荐穿戴部件中高亮新品<br/>
 					6.27: 添加关卡筛选功能<br/>
 					7.19: 给梦幻大使在线工具上传了新品的小图标并做了些优化<br/>
+					8.30: 赶在新章节前优化了一下偷懒攻略<br/>
 					<br/>
 				</div>
 					功能更新：by 黑的升华 & Rean翎<br/>
-					8.30: 赶在新章节前优化了一下偷懒攻略<br/>
 					10.6: 优化排斥品推荐计算；一键攻略改为按满饰品衰减计算（懒黑模式按无衰减计算、9饰品模式按9饰品衰减计算）<br/>
-					test<br/>
+					11.22: 明明没人动过突然炸了…搞不懂github，总之大家平时多备份衣柜<br/>
 					<hr/>
 					衣柜、设计图更新：by 翡翠<br/>
 					<div id="history-update-info-2"></div>
