--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
 			奇迹暖暖在线工具 by <a href="http://weibo.com/u/3597140883">@黑的升华</a>   modified from
 			<a href="http://ivangift.github.io/nikkiup2u3/"> ivangift's github</a><br/>
 			<div class="" role="alert">国内镜像访问地址<a href="http://qjnn.gift">http://qjnn.gift</a>, 原地址<a href="http://seal100x.github.io/nikkiup2u3/">http://seal100x.github.io/nikkiup2u3</a></div>
+			<div class="alert alert-danger">请使用国内镜像(qjnn.gift)访问配装器的小伙伴们注意, 此域名因到期, 下个月会改为其他地址访问, 大家及时备份自己的衣柜</div>
+			<div class="alert alert-info">因各种玄学问题, 近期配装器经常无法访问, 大家可以先下载离线版本使用, 数据更新至2016/12/03, 下载地址<a href="http://pan.baidu.com/s/1qXKIJj2">http://pan.baidu.com/s/1qXKIJj2</a></div>
 			衣柜、设计图更新：by 翡翠<br/>
 			关卡信息更新：by 兔子<br/>
 			<div id="share-link"></div>
