rename data src

--- a/wardrobechk.html
+++ b/wardrobechk.html
@@ -13,7 +13,7 @@
 		<link rel="stylesheet" type="text/css" href="mobileui.css" media="only screen and (max-width: 650px)">
 		<style>table td {vertical-align:top;}</style>
 		<script type='text/javascript' charset="UTF-8" src='jquery.js'></script>
-		<script type='text/javascript' charset="UTF-8" src='data/wardrobe.js'></script>
+		<script type='text/javascript' charset="UTF-8" src='../nikkiup2u3_data/wardrobe.js'></script>
 		<script type='text/javascript' charset="UTF-8" src='wardrobechk.js'></script>
 	</head>
 	<body>
