--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 				</div>
 					功能更新：by 黑的升华 & Rean翎<br/>
 					10.6: 优化排斥品推荐计算；一键攻略改为按满饰品衰减计算（懒黑模式按无衰减计算、9饰品模式按9饰品衰减计算）<br/>
-					11.22: 明明没人动过突然炸了…搞不懂github，总之大家平时多备份衣柜<br/>
+					12.6: 鉴于很多人问怎么检查少了一件衣服的问题，做了一个游戏衣柜对比页，<a href="wardrobechk.html">连接点此</a><br/>
 					<hr/>
 					衣柜、设计图更新：by 翡翠<br/>
 					<div id="history-update-info-2"></div>
@@ -180,6 +180,8 @@
 				<a href="introduce.html" target="_blank">配装器使用介绍(临时版, 图多慎点)</a>
 				&nbsp;&nbsp;|&nbsp;&nbsp;
 				<a href="../nikkiup2u3_data/FAQ.html" target="_blank">常见问题FAQ</a>
+				&nbsp;&nbsp;|&nbsp;&nbsp;
+				<a href="wardrobechk.html" target="_blank">游戏衣柜对比</a>
 				<button style="display:none" class="btn btn-sm btn-default" id="sharewardrobe">分享衣柜</button>&nbsp;&nbsp;|&nbsp;&nbsp;
 				<button style="display:none" class="btn btn-sm btn-default" id="aaa" onclick="getWardrobe()">同步分享的衣柜</button>
 				<br/>
