--- a/wardrobechk.html
+++ b/wardrobechk.html
@@ -23,8 +23,8 @@
 			<br/>
 			使用说明：<br/>
 			1）在配装器完成衣柜录入后，刷新此页面（一定要刷新！）<br/>
-			2）游戏中点衣柜，选择对应分类<br/>
-			3）检查此页面衣服排版是否和游戏中衣柜一致，若此页左边的衣服游戏中在右边，则前面肯定少了一件<br/>
+			2）游戏中点衣柜，对比各分类拥有数量和此页分类名称后的数字是否一致<br/>
+			3）出现不一致时，随机抽查该分类的某一位置，检查此页左边的衣服编号是否在游戏衣柜中也是左边。如果同样都是左边，则该位置以前都是正确的；否则就是在该位置之前少了一件。<br/>
 		</div>
 		<hr>
 		<div id ='category_container'></div>
