--- a/wardrobechk.html
+++ b/wardrobechk.html
@@ -22,9 +22,9 @@
 			本页面为衣柜对比工具，配装器、衣柜录入等功能请到上面的链接使用～<br/>
 			<br/>
 			使用说明：<br/>
-			1）在配装器完成衣柜录入后，刷新此页面（一定要刷新！）<br/>
-			2）游戏中点衣柜，对比各分类拥有数量和此页分类名称后的数字是否一致<br/>
-			3）出现不一致时，随机抽查该分类的某一位置，检查此页左边的衣服编号是否在游戏衣柜中也是左边。如果同样都是左边，则该位置以前都是正确的；否则就是在该位置之前少了一件。<br/>
+			1）在配装器完成衣柜录入后，刷新此页面。（一定要刷新！）<br/>
+			2）游戏中点衣柜，对比各分类拥有数量和此页分类名称后的数字是否一致。<br/>
+			3）出现不一致时，随机选取该分类下本页面左边的某一位置，检查此处衣服是否在游戏衣柜中也是左边。如果同样都是左边，则该位置以前都是正确的；否则就是在该位置上方（比该衣服编号小的服装中）少了一件。<br/>
 		</div>
 		<hr>
 		<div id ='category_container'></div>
