--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<link rel="icon" href="favicon.ico" type="image/x-icon" />
 		<meta name="renderer" content="webkit">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-		<title>Σ(°△°||)︴ 奇迹暖暖在线工具</title>
+		<title>~~(～o￣▽￣)～o 奇迹暖暖在线工具o～(＿△＿o～) ~~</title>
 		<link rel="stylesheet" href="bootstrap/bootstrap.min.css">
 		<link rel="stylesheet" href="onekeystrategy.css">
 		<link rel="stylesheet" href="style.css">
@@ -35,11 +35,10 @@
 		<div class='title'>
 			奇迹暖暖在线工具 by <a href="http://weibo.com/u/3597140883">@黑的升华</a>   modified from
 			<a href="http://ivangift.github.io/nikkiup2u3/"> ivangift's github</a><br/>
-			<div class="" role="alert">国内镜像访问地址<a href="http://qjnn.gift">http://qjnn.gift</a>, 原地址<a href="http://seal100x.github.io/nikkiup2u3/">http://seal100x.github.io/nikkiup2u3</a></div>
-			<div class="alert alert-danger">请使用国内镜像(qjnn.gift)访问配装器的小伙伴们注意, 此域名因到期, 下个月会改为其他地址访问, 大家及时备份自己的衣柜</div>
-			<div class="alert alert-info">因各种玄学问题, 近期配装器经常无法访问, 大家可以先下载离线版本使用, 数据更新至2016/12/03, 下载地址<a href="http://pan.baidu.com/s/1qXKIJj2">http://pan.baidu.com/s/1qXKIJj2</a></div>
+			<div class="" role="alert">国内镜像访问地址<a href="http://seal.coding.me/qjnn">seal.coding.me/qjnn</a>, 原地址<a href="http://seal100x.github.io/nikkiup2u3/">seal100x.github.io/nikkiup2u3</a>, 离线版(1月3日)<a href="http://pan.baidu.com/s/1o8vwuPc">pan.baidu.com/s/1o8vwuPc</a></div>
 			衣柜、设计图更新：by 翡翠<br/>
 			关卡信息更新：by 兔子<br/>
+			<div class="alert alert-danger">请使用国内镜像(qjnn.gift)访问配装器的小伙伴们注意, 此域名因到期, 请及时将自己的衣柜转移到上边新的国内镜像地址</div>
 			<div id="share-link"></div>
 		</div>
 		<div id="StrategyInfo"></div>
