友链台服版本

--- a/index.html
+++ b/index.html
@@ -36,9 +36,10 @@
 			奇迹暖暖在线工具 by <a href="http://weibo.com/u/3597140883">@黑的升华</a>   modified from
 			<a href="http://ivangift.github.io/nikkiup2u3/"> ivangift's github</a><br/>
 			<div class="" role="alert">国内镜像访问地址<a href="http://seal.coding.me/qjnn">seal.coding.me/qjnn</a>, 原地址<a href="http://seal100x.github.io/nikkiup2u3/">seal100x.github.io/nikkiup2u3</a>, 离线版(1月3日)<a href="http://pan.baidu.com/s/1o8vwuPc">pan.baidu.com/s/1o8vwuPc</a></div>
+			友情链接：台服小伙伴自行维护的版本<a href="http://nikkitw.github.io/nikkitw/">nikkitw.github.io/nikkitw/</a><br/>
 			衣柜、设计图更新：by 翡翠<br/>
 			关卡信息更新：by 兔子<br/>
-			<div class="alert alert-danger">请使用国内镜像(qjnn.gift)访问配装器的小伙伴们注意, 此域名因到期, 请及时将自己的衣柜转移到上边新的国内镜像地址</div>
+			<!--<div class="alert alert-danger">请使用国内镜像(qjnn.gift)访问配装器的小伙伴们注意, 此域名因到期, 请及时将自己的衣柜转移到上边新的国内镜像地址</div>-->
 			<div id="share-link"></div>
 		</div>
 		<div id="StrategyInfo"></div>
