--- a/index.html
+++ b/index.html
@@ -359,5 +359,21 @@
 		})();
 	}
 	</script>
+	<div id="lv-container" data-id="city" data-uid="MTAyMC8yODU2Ny81MTM4">
+	<script type="text/javascript">
+	var refer = "seal100x.github.io/nikkiup2u3/";
+	   (function(d, s) {
+		   var j, e = d.getElementsByTagName(s)[0];
+
+		   if (typeof LivereTower === 'function') { return; }
+
+		   j = d.createElement(s);
+		   j.src = 'https://cdn-city.livere.com/js/embed.dist.js';
+		   j.async = true;
+
+		   e.parentNode.insertBefore(j, e);
+	   })(document, 'script');
+		</script>
+	</div>
 	</body>
 </html>
