--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 			<div class="" role="alert">国内镜像访问地址<a href="http://seal.coding.me/qjnn">seal.coding.me/qjnn</a>, 原地址<a href="http://seal100x.github.io/nikkiup2u3/">seal100x.github.io/nikkiup2u3</a>, 离线版(4月15日)<a href="http://pan.baidu.com/s/1hsGCRHU">pan.baidu.com/s/1hsGCRHU</a></div>
 			衣柜、设计图更新：by 翡翠<br/>
 			关卡信息更新：by 兔子<br/>
-			友情链接：小伙伴自行维护的<a href="http://nikkitw.github.io/nikkitw">台服版</a>、<a href="http://nikkijp.github.io/nikkijp">日服版</a><br/>
+			友情链接：小伙伴自行维护的<a href="http://nikkitw.github.io/nikkitw">台服版</a>、<a href="http://nikkijp.github.io/nikkijpch">日服简中版</a>、<a href="http://nikkijap.github.io/nikkijp">日服繁中版</a><br/>
 			<!--<div class="alert alert-danger">请使用国内镜像(qjnn.gift)访问配装器的小伙伴们注意, 此域名因到期, 请及时将自己的衣柜转移到上边新的国内镜像地址</div>-->
 			<div id="share-link"></div>
 		</div>
