--- a/index.html
+++ b/index.html
@@ -157,11 +157,12 @@
 					7.19: 给梦幻大使在线工具上传了新品的小图标并做了些优化<br/>
 					8.30: 赶在新章节前优化了一下偷懒攻略<br/>
 					10.6: 优化排斥品推荐计算；一键攻略改为按满饰品衰减计算（懒黑模式按无衰减计算、9饰品模式按9饰品衰减计算）<br/>
+					12.6: 鉴于很多人问怎么检查少了一件衣服的问题，做了一个游戏衣柜对比页，<a href="wardrobechk.html">连接点此</a><br/>
 					<br/>
 				</div>
 					功能更新：by 黑的升华 & Rean翎<br/>
-					12.6: 鉴于很多人问怎么检查少了一件衣服的问题，做了一个游戏衣柜对比页，<a href="wardrobechk.html">连接点此</a><br/>
 					4.28: 偷懒攻略大改版，测试中欢迎反馈<br/>
+					8.31: 重新计算了衣服属性取值，推荐结果会有所不同<br/>
 					<hr/>
 					衣柜、设计图更新：by 翡翠<br/>
 					<div id="history-update-info-2"></div>
