--- a/index.html
+++ b/index.html
@@ -158,11 +158,12 @@
 					8.30: 赶在新章节前优化了一下偷懒攻略<br/>
 					10.6: 优化排斥品推荐计算；一键攻略改为按满饰品衰减计算（懒黑模式按无衰减计算、9饰品模式按9饰品衰减计算）<br/>
 					12.6: 鉴于很多人问怎么检查少了一件衣服的问题，做了一个游戏衣柜对比页，<a href="wardrobechk.html">连接点此</a><br/>
+					4.28: 偷懒攻略大改版，测试中欢迎反馈<br/>
 					<br/>
 				</div>
 					功能更新：by 黑的升华 & Rean翎<br/>
-					4.28: 偷懒攻略大改版，测试中欢迎反馈<br/>
 					8.31: 重新计算了衣服属性取值，推荐结果会有所不同<br/>
+					9.5: 衣服筛选增加梦境选项<br/>
 					<hr/>
 					衣柜、设计图更新：by 翡翠<br/>
 					<div id="history-update-info-2"></div>
@@ -299,6 +300,7 @@
 									<button  type="button" class="btn btn-xs btn-default front_filter_option" >设计图</button>
 									<button  type="button" class="btn btn-xs btn-default front_filter_option" >设计图染/进</button>
 									<button  type="button" class="btn btn-xs btn-default front_filter_option" >活动</button>
+									<button  type="button" class="btn btn-xs btn-default front_filter_option" >梦境</button>
 									<button  type="button" class="btn btn-xs btn-default front_filter_option" >赠送/签到</button>
 									<button  type="button" class="btn btn-xs btn-default front_filter_option" >迷之屋限定</button>
 									<button  type="button" class="btn btn-xs btn-default front_filter_option" >迷之屋限定染/进</button>
