add uifilter byCategoryAndId

--- a/index.html
+++ b/index.html
@@ -160,10 +160,11 @@
 					4.28: 偷懒攻略大改版，测试中欢迎反馈<br/>
 					8.31: 重新计算了衣服属性取值，推荐结果会有所不同<br/>
 					9.5: 衣服筛选增加梦境选项<br/>
+					8.4: 衣服越来越多，为了方便拷贝备份，做了一个短版的衣柜备份文本，可以生成短版文本并恢复备份。测试阶段暂时不动原本备份区的逻辑，建议大家试用前先备份一次长版，以免丢失衣柜<br/>
 					<br/>
 				</div>
 					功能更新：by 黑的升华 & Rean翎<br/>
-					8.4: 衣服越来越多，为了方便拷贝备份，做了一个短版的衣柜备份文本，可以生成短版文本并恢复备份。测试阶段暂时不动原本备份区的逻辑，建议大家试用前先备份一次长版，以免丢失衣柜<br/>
+					2020.6.20: 久违的更新，本次增加模仿游戏中上回试穿的子类别按编号排序功能<br/>
 					<hr/>
 					衣柜、设计图更新：by 翡翠<br/>
 					<div id="history-update-info-2"></div>
@@ -285,6 +286,7 @@
 									<div class="checkbox"><label><input type="checkbox" class="fliter" value="highscore" /> 高分权重</label></div>
 									<div class="checkbox"><label><input type="checkbox" class="fliter" value="acc9" /> 9件饰品</label></div>
 									<div class="checkbox"><label><input type="checkbox" class="fliter" value="toulan" /> 偷懒模式(测试4)</label></div>
+									<div class="checkbox"><label><input type="checkbox" class="fliter" value="byCategoryAndId" /> 上回试穿排序</label></div>
 							</fieldset>
 							<fieldset>
 								<legend>筛选(先点击显示全部衣服)</legend>
