shorten inventory string in model

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 					<br/>
 				</div>
 					功能更新：by 黑的升华 & Rean翎<br/>
-					2020.6.20: 久违的更新，本次增加模仿游戏中上回试穿的子类别按编号排序功能<br/>
+					2020.6.20: 久违的更新，本次增加模仿游戏中上回试穿的子类别按编号排序功能；并自动使用短版备份文本<br/>
 					<hr/>
 					衣柜、设计图更新：by 翡翠<br/>
 					<div id="history-update-info-2"></div>
@@ -346,7 +346,7 @@
 		<p style="width:60%; display:none">衣柜数量记录 （复制衣橱文本框内容以备份衣橱）</p>
 		<textarea id="myClothesNum" rows=10 style="width:60%; display:none"></textarea>
 		<br/>
-		<button onClick="loadCustomInventory()">恢复备份</button> <button onClick="genShortInventory()">生成短文本(测试)</button>
+		<button onClick="loadCustomInventory()">恢复备份</button>
 		<br/>
 		<hr>
 		
