--- a/index.html
+++ b/index.html
@@ -161,10 +161,11 @@
 					8.31: 重新计算了衣服属性取值，推荐结果会有所不同<br/>
 					9.5: 衣服筛选增加梦境选项<br/>
 					8.4: 衣服越来越多，为了方便拷贝备份，做了一个短版的衣柜备份文本，可以生成短版文本并恢复备份。测试阶段暂时不动原本备份区的逻辑，建议大家试用前先备份一次长版，以免丢失衣柜<br/>
+					2020.6.20: 久违的更新，本次增加模仿游戏中上回试穿的子类别按编号排序功能；并自动使用短版备份文本<br/>
 					<br/>
 				</div>
 					功能更新：by 黑的升华 & Rean翎<br/>
-					2020.6.20: 久违的更新，本次增加模仿游戏中上回试穿的子类别按编号排序功能；并自动使用短版备份文本<br/>
+					2021.3.24: 推荐穿戴部件会计算假肢部件和皮肤冲突的情况，自动推荐更高分的组合（假肢+无皮肤/正常姿势+皮肤）；购物车分数会根据饰品数量自动计算衰减后分数<br/>
 					<hr/>
 					衣柜、设计图更新：by 翡翠<br/>
 					<div id="history-update-info-2"></div>
